--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -178,7 +178,7 @@
                                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                     <li><a href="#" class="link-dark rounded">Copias de Seguridad</a></li>
                                     <li><a href="#" class="link-dark rounded">Restaurar</a></li>
-                                    <li><a href="#" class="link-dark rounded">Verificación de Integridad</a></li>
+                                    <li>@Html.ActionLink("Verificación de Integridad", "Integridad", "Db", null, new { @class = "link-dark rounded", @id = "IntegridadDb" })</li>
                                 </ul>
                             </div>
                         </li>
