--- a/UI/Views/Db/Integridad.cshtml
+++ b/UI/Views/Db/Integridad.cshtml
@@ -21,7 +21,29 @@
                 <a href="#" class="btn btn-primary" onclick="Confirmar()">Ejecutar</a>
             </div>
         </div>
+        <br />
+
+        <div class="alert alert-success d-flex align-items-center fade collapse" role="alert" id="ResultadoOk" style="max-width: 400px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg>
+            <div>
+                Verificación Exitosa!
+            </div>
+        </div>
+
+        <div class="alert alert-danger d-flex align-items-center fade collapse" role="alert" id="ResultadoFalla" style="max-width: 400px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+            </svg>
+            <div>
+                Se encontraron errores en la verificación, consulte la Bitacora para ver los resultados del análisis.
+            </div>
+        </div>
+
     </div>
+
+
 </main>
 
 <!-- Modal Confirmar-->
@@ -59,15 +81,24 @@
 
           var Ejecutar = function () {
 
-
             $.ajax({
 
                 type: "POST",
                 url: "/Db/EjecutarAnalisis",
-                success: function (result) {
-
-                    $("#Confirmar").modal("hide");
-                    location.reload();
+                success: function (response) {
+                    if (response.success) {
+                        $("#Confirmar").modal("hide");
+                        $("#ResultadoOk").addClass('show');
+                        window.setTimeout(function () {
+                            $('#ResultadoOk').removeClass('show');
+                        }, 10000);
+                    } else {
+                        $("#Confirmar").modal("hide");
+                        $('#ResultadoFalla').addClass('show');
+                        window.setTimeout(function () {
+                            $('#ResultadoFalla').removeClass('show');
+                        },10000);
+                    }
                 }
             })
         }
