--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -166,8 +166,8 @@
                                 Gestión de Idiomas
                             </button>
                             <div class="collapse" id="idioma-collapse">
-                                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                    <li><a href="#" class="link-dark rounded">Idiomas</a></li>
+                                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">                                   
+                                    <li>@Html.ActionLink("Gestión de Idiomas", "index", "Idioma", null, new { @class = "link-dark rounded", @id = "Idioma" })</li>
                                     <li><a href="#" class="link-dark rounded">Traducciones</a></li>
                                 </ul>
                             </div>
