--- a/UI/Views/Idioma/Edit.cshtml
+++ b/UI/Views/Idioma/Edit.cshtml
@@ -36,7 +36,7 @@
                     @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            <br />
             <div class="form-group">
                 @Html.LabelFor(model => model.PorDefecto, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -46,10 +46,10 @@
                     </div>
                 </div>
             </div>
-
+            <br />
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
                 </div>
             </div>
         </div>
