--- a/UI/Views/Bitacora/Index.cshtml
+++ b/UI/Views/Bitacora/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<BE.BitacoraBE>
+﻿@model PagedList.IPagedList<BE.BitacoraBE>
+@using PagedList
+@using PagedList.Mvc
+
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
@@ -12,7 +15,7 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
+                    <th scope="col">Id</th>
                     <th scope="col">Fecha</th>
                     <th scope="col">Detalle</th>
                     <th scope="col">Usuario</th>
@@ -40,7 +43,14 @@
 
             </tbody>
         </table>
+        <div class="pagination">
+            @Html.PagedListPager(Model, pagina => Url.Action("Index", new { pagina }),PagedListRenderOptions.Classic)
+        </div>
+        @*<div class="pagination" style="margin-left: 400px">
+            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)
+            of @Model.PageCount   @Html.PagedListPager(Model, pagina => Url.Action("Index", new { pagina }))
+        </div>*@
     </div>
-   
+
 
 </main>
