--- a/UI/Views/Permisos/GrupoPermisos.cshtml
+++ b/UI/Views/Permisos/GrupoPermisos.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<BE.PerfilFamiliaBE>
+﻿@model X.PagedList.PagedList<BE.PerfilFamiliaBE>
+
+@using X.PagedList.Mvc
+@using X.PagedList.Mvc.Common
 
 @{
     ViewBag.Title = "Grupos de Permisos";
@@ -8,6 +11,15 @@
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Grupos de Permisos</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
+            @using (Html.BeginForm())
+            {
+                <div class="btn-group me-2">
+                    <span>
+                        Buscar @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
+
+                    </span>
+                </div>
+            }
             <div class="btn-group me-2">
                 <a>@Html.ActionLink("Nuevo", "CrearGrupo", "Permisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
                 <button type="button" class="btn btn-sm btn-outline-secondary">Exportar</button>
@@ -20,8 +32,8 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
-                    <th scope="col">@Html.DisplayNameFor(model => model.Descripcion)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Id)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Descripcion)</th>
 
                     <th scope="col">Acciones</th>
 
@@ -47,8 +59,20 @@
 
             </tbody>
         </table>
-
+        <div class="pagination">
+            @Html.PagedListPager(Model, pagina => Url.Action("GrupoPermisos", new { pagina, Valor_Filtro = ViewBag.ValorFiltro }),
+            new PagedListRenderOptions
+            {
+                DisplayLinkToIndividualPages = true,
+                DisplayPageCountAndCurrentLocation = false,
+                MaximumPageNumbersToDisplay = 8,
+                LiElementClasses = new string[] { "page-item" },
+                PageClasses = new string[] { "page-link" },
+            })
         </div>
+    </div>
+
+
 </main>
 
 <script>
