--- a/UI/Views/Permisos/Permisos.cshtml
+++ b/UI/Views/Permisos/Permisos.cshtml
@@ -1,5 +1,7 @@
-﻿@model IEnumerable<BE.PerfilPatenteBE>
+﻿@model X.PagedList.PagedList<BE.PerfilPatenteBE>
 
+@using X.PagedList.Mvc
+@using X.PagedList.Mvc.Common
 @{
     ViewBag.Title = "Permisos del Sistema";
 }
@@ -10,7 +12,15 @@
         <h1 class="h2">Permisos del Sistema</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
-                
+                @using (Html.BeginForm())
+                {
+                    <div class="btn-group me-2">
+                        <span>
+                            Buscar @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
+
+                        </span>
+                    </div>
+                }
                 <button type="button" class="btn btn-sm btn-outline-secondary">Exportar</button>
             </div>
 
@@ -22,9 +32,9 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
-                    <th scope="col">@Html.DisplayNameFor(model => model.Permiso)</th>
-                    <th scope="col">@Html.DisplayNameFor(model => model.Descripcion)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Id)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Permiso)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Descripcion)</th>
 
 
                 </tr>
@@ -45,10 +55,20 @@
 
             </tbody>
         </table>
-
+        <div class="pagination">
+            @Html.PagedListPager(Model, pagina => Url.Action("Permisos", new { pagina, Valor_Filtro = ViewBag.ValorFiltro }),
+            new PagedListRenderOptions
+            {
+                DisplayLinkToIndividualPages = true,
+                DisplayPageCountAndCurrentLocation = false,
+                MaximumPageNumbersToDisplay = 8,
+                LiElementClasses = new string[] { "page-item" },
+                PageClasses = new string[] { "page-link" },
+            })
+        </div>
     </div>
 
-    </main>
+</main>
 
 
 <script>
